<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <ImageView
        android:id="@+id/ivBlueBackground"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/corner_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivWhiteBackground"
        android:layout_width="350dp"
        android:layout_height="300dp"
        android:background="@drawable/corner_white_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivWhiteLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/exchange_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvMyAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="ExchangeMyCash"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivWhiteLogo" />

    <LinearLayout
        android:id="@+id/llExchangeTypes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvMyAppName">

        <Spinner
            android:id="@+id/spinner_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/corner_white_bg_black_corner"
            android:entries="@array/currencies"
            android:padding="8dp"
            android:spinnerMode="dialog" />

        <ImageView
            android:id="@+id/ivArrows"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/baseline_compare_arrows_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvMyAppName" />

        <Spinner
            android:id="@+id/spinner_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/corner_white_bg_black_corner"
            android:entries="@array/currencies"
            android:padding="8dp"
            android:spinnerMode="dialog" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <TextView
            android:id="@+id/tv_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:text="@string/from"
            android:textColor="@color/lightgrey" />

        <EditText
            android:id="@+id/et_mystartvalue"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@drawable/corner_grey_bg"
            android:hint="@string/add_start_Value"
            android:inputType="numberDecimal"
            android:padding="8dp"
            android:textAlignment="textStart"
            android:textSize="18dp"
            tools:text="2555" />

        <TextView
            android:id="@+id/tv_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:text="@string/to"
            android:textColor="@color/lightgrey" />

        <TextView
            android:id="@+id/tv_result"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@drawable/corner_grey_bg"
            android:padding="8dp"
            android:text="0.0"
            android:textAlignment="textStart"
            android:textSize="18dp"
            tools:text="250.5055" />

        <TextView
            android:id="@+id/tv_MarketRates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:text="@string/marketrate"
            android:textColor="@color/lightgrey"
            android:textStyle="bold"
            android:layout_gravity="center"/>

        <Spinner
            android:id="@+id/spinner_MarketRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/corner_grey_bg"
            android:entries="@array/marketrate"
            android:padding="8dp"
            android:spinnerMode="dialog"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"/>


    </LinearLayout>

    <Button
        style="@style/Widget.MaterialComponents.Button"
        android:theme="@style/Widget.AppCompat.Button"
        android:id="@+id/bShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivWhiteBackground"
        android:text="@string/share"
        android:drawableRight="@drawable/baseline_share_24"
        android:padding="15dp"
        android:textColor="@color/white"
        android:background="@drawable/corner_orange_bg"
        android:textSize="18sp"
        app:backgroundTint="@color/orange"
        />

</androidx.constraintlayout.widget.ConstraintLayout>